--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -30,6 +30,24 @@
     cursor: pointer;
 
 }
+
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+
+.section-heading h2{
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+
+.section-heading p{
+    font-size: 18px;
+    margin-bottom: 30ox;
+    line-height: 30px;
+    color: #757575;
+
+}
 /*main style*/
 header{
     background-color: #f4f0ee;
@@ -96,4 +114,32 @@ nav .menu a{
     max-width: 585px;
     vertical-align: middle;
 
+}
+
+#about{
+    padding-top: 130px;
+}
+
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: auto;
+    text-align: center;
+    background-color: #fff8f3;
+    padding: 131px 156px;
+}
+
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+
+
+}
+.about-info .info-card p{
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+.about-info .info-card h4{
+    font-size: 20px;
 }
